fase 4 level 1 done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.materi.tambah.TambahMateriActivity"
+        <activity android:name=".ui.terapi.chooser.ChooserAnakActivity"></activity>
+        <activity
+            android:name=".ui.materi.tambah.TambahMateriActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.anak.detail.DetailAnakActivity" />
+        <activity android:name=".ui.terapi.fase4.Fase4Activity" />
         <activity
             android:name=".ui.register.RegisterActivity"
             android:windowSoftInputMode="adjustPan" />
