--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/NoActionBar" />
+            android:label="@string/title_activity_main2" />
         <activity android:name=".SplashActivity" />
     </application>
 
