--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:3.1.0-beta.1'
 
 }
