--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_new"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.progress.ProgressTerapiActivity"></activity>
+        <activity android:name=".ui.panduan.PanduanActivity"></activity>
+        <activity android:name=".ui.tentang.TentangActivity" />
+        <activity android:name=".ui.progress.ProgressTerapiActivity" />
         <activity android:name=".ui.progress.detail.DetailProgressActivity" />
         <activity android:name=".ui.progress.tambah.InputProgressTerapiActivity" />
         <activity
